--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Kalam:wght@400;700&family=Pacifico&family=Pangolin&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 
 .swiper-pagination > .swiper-pagination-bullet {
   opacity: 1;
@@ -18,4 +20,17 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.roboto-font {
+  font-family: "Roboto", sans-serif;
+}
+.cinzel {
+  font-family: "Cinzel", serif;
+}
+.kalam {
+  font-family: "Kalam", cursive;
+}
+.pangolin {
+  font-family: "Pangolin", cursive;
 }
