--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Kalam:wght@400;700&family=Pacifico&family=Pangolin&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@200;400;500;600;700&family=Playfair:wght@400;500;600;700&display=swap');
+
 
 .swiper-pagination > .swiper-pagination-bullet {
   opacity: 1;
@@ -33,4 +35,14 @@
 }
 .pangolin {
   font-family: "Pangolin", cursive;
+}
+.lato {
+  font-family: 'Lato', sans-serif;
+}
+.montserrat {
+  font-family: 'Montserrat', sans-serif;
+}
+.playfair {
+font-family: 'Playfair', serif;
+
 }
